Added basic navbar

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@ node_modules
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# IDE - VSCode.
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
