--- a/apps/iot-land/project.json
+++ b/apps/iot-land/project.json
@@ -15,8 +15,14 @@
         "polyfills": "apps/iot-land/src/polyfills.ts",
         "tsConfig": "apps/iot-land/tsconfig.app.json",
         "assets": ["apps/iot-land/src/favicon.ico", "apps/iot-land/src/assets"],
-        "styles": ["apps/iot-land/src/styles.css"],
-        "scripts": []
+        "styles": [
+          "apps/iot-land/src/styles.css",
+          "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+        ],
+        "scripts": [
+          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+          "node_modules/jquery/dist/jquery.min.js"
+        ]
       },
       "configurations": {
         "production": {
