--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
+    "@angular/localize": "~14.2.0",
     "@nrwl/angular": "^15.1.0",
     "@nrwl/cli": "15.1.0",
     "@nrwl/cypress": "15.1.0",
@@ -49,6 +50,10 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.2.2",
+    "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
