--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: npm install and build the Website
         run: |
-          npm ci
-          nx build
+            npm install
+            npm run build
       - uses: actions/upload-artifact@v3
         with:
           name: artifact
@@ -27,8 +27,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: npm install and run test
         run: |
-          npm ci
-          nx test
+          npm install
+          npm run test
   netlify-deploy:
     runs-on: ubuntu-latest
     needs: run-npm-test
