--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
             npm run build
       - uses: actions/upload-artifact@v3
         with:
-          name: artifact
+          name: iot-land
           path: "./dist/apps/iot-land"
 
   run-npm-test:
