--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: npm install and build the Website
         run: |
-            npm install
+            npm install --legacy-peer-deps
             npm run build
       - uses: actions/upload-artifact@v3
         with:
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: npm install and run test
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run test
   netlify-deploy:
     runs-on: ubuntu-latest
